--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,9 +71,11 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:layout_gravity="center"
         android:orientation="vertical">
+
+
         <!-- Верхний ряд -->
         <LinearLayout
             android:id="@+id/paint_colors"
@@ -90,6 +92,7 @@
                 android:onClick="paintClicked"
                 android:src="@drawable/paint"
                 android:tag="#FF660000" />
+
             <ImageButton
                 android:layout_width="@dimen/large_brush"
                 android:layout_height="@dimen/large_brush"
@@ -99,6 +102,7 @@
                 android:onClick="paintClicked"
                 android:src="@drawable/paint"
                 android:tag="#FFFF0000" />
+
             <ImageButton
                 android:layout_width="@dimen/large_brush"
                 android:layout_height="@dimen/large_brush"
@@ -108,6 +112,7 @@
                 android:onClick="paintClicked"
                 android:src="@drawable/paint"
                 android:tag="#FFFF6600" />
+
             <ImageButton
                 android:layout_width="@dimen/large_brush"
                 android:layout_height="@dimen/large_brush"
@@ -117,6 +122,7 @@
                 android:onClick="paintClicked"
                 android:src="@drawable/paint"
                 android:tag="#FFFFCC00" />
+
             <ImageButton
                 android:layout_width="@dimen/large_brush"
                 android:layout_height="@dimen/large_brush"
@@ -126,6 +132,7 @@
                 android:onClick="paintClicked"
                 android:src="@drawable/paint"
                 android:tag="#FF009900" />
+
             <ImageButton
                 android:layout_width="@dimen/large_brush"
                 android:layout_height="@dimen/large_brush"
@@ -141,6 +148,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <ImageButton
                 android:layout_width="@dimen/large_brush"
                 android:layout_height="@dimen/large_brush"
@@ -150,6 +158,7 @@
                 android:onClick="paintClicked"
                 android:src="@drawable/paint"
                 android:tag="#FF0000FF" />
+
             <ImageButton
                 android:layout_width="@dimen/large_brush"
                 android:layout_height="@dimen/large_brush"
@@ -159,6 +168,7 @@
                 android:onClick="paintClicked"
                 android:src="@drawable/paint"
                 android:tag="#FF990099" />
+
             <ImageButton
                 android:layout_width="@dimen/large_brush"
                 android:layout_height="@dimen/large_brush"
@@ -168,6 +178,7 @@
                 android:onClick="paintClicked"
                 android:src="@drawable/paint"
                 android:tag="#FFFF6666" />
+
             <ImageButton
                 android:layout_width="@dimen/large_brush"
                 android:layout_height="@dimen/large_brush"
@@ -177,6 +188,7 @@
                 android:onClick="paintClicked"
                 android:src="@drawable/paint"
                 android:tag="#FFFFFFFF" />
+
             <ImageButton
                 android:layout_width="@dimen/large_brush"
                 android:layout_height="@dimen/large_brush"
@@ -186,6 +198,7 @@
                 android:onClick="paintClicked"
                 android:src="@drawable/paint"
                 android:tag="#FF787878" />
+
             <ImageButton
                 android:layout_width="@dimen/large_brush"
                 android:layout_height="@dimen/large_brush"
@@ -196,6 +209,77 @@
                 android:src="@drawable/paint"
                 android:tag="#FF000000" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"></LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:layout_width="@dimen/large_brush"
+                android:layout_height="@dimen/large_brush"
+                android:layout_margin="2dp"
+                android:background="#99FFFF"
+                android:contentDescription="@string/paint"
+                android:onClick="paintClicked"
+                android:src="@drawable/paint"
+                android:tag="#99FFFF" />
+
+            <ImageButton
+                android:layout_width="@dimen/large_brush"
+                android:layout_height="@dimen/large_brush"
+                android:layout_margin="2dp"
+                android:background="#888800"
+                android:contentDescription="@string/paint"
+                android:onClick="paintClicked"
+                android:src="@drawable/paint"
+                android:tag="#888800" />
+
+            <ImageButton
+                android:layout_width="@dimen/large_brush"
+                android:layout_height="@dimen/large_brush"
+                android:layout_margin="2dp"
+                android:background="#33FF33"
+                android:contentDescription="@string/paint"
+                android:onClick="paintClicked"
+                android:src="@drawable/paint"
+                android:tag="#33FF33" />
+
+            <ImageButton
+                android:layout_width="@dimen/large_brush"
+                android:layout_height="@dimen/large_brush"
+                android:layout_margin="2dp"
+                android:background="#880000"
+                android:contentDescription="@string/paint"
+                android:onClick="paintClicked"
+                android:src="@drawable/paint"
+                android:tag="#880000" />
+
+            <ImageButton
+                android:layout_width="@dimen/large_brush"
+                android:layout_height="@dimen/large_brush"
+                android:layout_margin="2dp"
+                android:background="#CCCCFF"
+                android:contentDescription="@string/paint"
+                android:onClick="paintClicked"
+                android:src="@drawable/paint"
+                android:tag="#CCCCFF" />
+
+            <ImageButton
+                android:layout_width="@dimen/large_brush"
+                android:layout_height="@dimen/large_brush"
+                android:layout_margin="2dp"
+                android:background="#770077"
+                android:contentDescription="@string/paint"
+                android:onClick="paintClicked"
+                android:src="@drawable/paint"
+                android:tag="#770077" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
